@@ -11,9 +11,9 @@
 	<description>arb4j</description>
 
 	<properties>
-		<maven.compiler.source>25</maven.compiler.source>
-		<maven.compiler.target>25</maven.compiler.target>
-		<maven.compiler.release>25</maven.compiler.release>
+		<maven.compiler.source>26</maven.compiler.source>
+		<maven.compiler.target>26</maven.compiler.target>
+		<maven.compiler.release>26</maven.compiler.release>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<javafx.version>25.0.2</javafx.version>
 		<asm.version>9.9.1</asm.version>
@@ -139,10 +139,7 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.14.0</version>
 				<configuration>
-					<release>25</release>
-					<compilerArgs>
-						<arg>--enable-preview</arg>
-					</compilerArgs>
+					<release>26</release>
 				</configuration>
 			</plugin>
 
@@ -162,7 +159,7 @@
 				<artifactId>maven-javadoc-plugin</artifactId>
 				<version>3.6.3</version>
 				<configuration>
-					<source>25</source>
+					<source>26</source>
 					<additionalJOptions>
 						<additionalJOption>--enable-preview</additionalJOption>
 						<additionalJOption>-Xdoclint:none</additionalJOption>
